force-app/main/default/objects/Episode__c/fields/Episode_Number__c.field-meta.xml
<CustomField>
    <fullName>Episode_Number__c</fullName>
    <description>The episode number for the TV show</description>
    <inlineHelpText>The episode number for the TV show</inlineHelpText>
    <label>Episode Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>