force-app/main/default/objects/Episode__c/fields/TV_Show__c.field-meta.xml
<CustomField>
    <fullName>TV_Show__c</fullName>
    <description>The tv show production that this episode belongs to.</description>
    <label>TV Show</label>
    <referenceTo>Production__c</referenceTo>
    <relationshipLabel>Episodes</relationshipLabel>
    <relationshipName>Episodes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>